[package]
name = "more-jpeg"
version = "0.1.0"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2018"

[dependencies]
tide = "0.11.0"
async-std = { version = "1.6.2", features = ["attributes"] }
liquid = "0.20.1"
log = "0.4.8"
pretty_env_logger = "0.4.0"
thiserror = "1.0.20"
base64 = "0.12.3"
